<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    tools:context="io.alastria.alastriaid.login.LoginActivity">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loginPlaceholderEmail"
        android:inputType="textEmailAddress"
        tools:hint="@string/loginPlaceholderEmail"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/txtPIN"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/loginPlaceholderPIN"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/txtObtainPIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@+id/txtPIN"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/loginLblObtainPIN" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/loginBtnLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtObtainPIN" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/loginBtnRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</android.support.constraint.ConstraintLayout>
