<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    tools:context="io.alastria.alastriaid.register.RegisterActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/PageTitle"/>

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPlaceholderFirstName"
        android:inputType="textPersonName"
        tools:hint="@string/registerPlaceholderFirstName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"  />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPlaceholderLastName"
        android:inputType="textPersonName"
        tools:hint="@string/registerPlaceholderLastName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPlaceholderEmail"
        android:inputType="textEmailAddress"
        tools:hint="@string/registerPlaceholderEmail"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loginBtnRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
</android.support.constraint.ConstraintLayout>
