<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_left_margin"
    android:layout_marginRight="@dimen/activity_right_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context="io.alastria.alastriaid.register.RegisterActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileTitle"
        android:theme="@style/PageTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profileImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:layout_marginTop="16dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnUploadPhoto"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintLeft_toLeftOf="@+id/profileImage"
        app:layout_constraintRight_toRightOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/profileImage"
        app:srcCompat="@android:drawable/stat_sys_upload" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/registerPlaceholderFirstName"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        tools:hint="@string/registerPlaceholderFirstName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPlaceholderLastName"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
        tools:hint="@string/registerPlaceholderLastName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPlaceholderEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
        tools:hint="@string/registerPlaceholderEmail"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPlaceholderPhone"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:hint="@string/registerPlaceholderPhone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPlaceholderDni"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber"
        tools:hint="@string/registerPlaceholderDni"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btnContinue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDni" />
</android.support.constraint.ConstraintLayout>
